src/styles/Home.module.css
.logo_spacing {
    margin-bottom: 20rem;
}

.descriptionText {
    display: -webkit-box;
    -webkit-line-clamp: 5;
    line-clamp: 5;
    -webkit-box-orient: vertical;
    overflow: hidden;

    font-size: 1rem;          
    color: #4b5563;            
    line-height: 1.5;           
    margin-bottom: 1rem;    

    min-height: 4.5em; 
}

